copying parent and vertex children when parent has constructive modifiers destroys children locations #46385

Closed
opened 2015-10-05 20:08:40 +02:00 by bassam kurdali · 5 comments
Member

System Information
GNU/Linux (Fedora 23) Intel and nVidia gfx , intel cpu

Blender Version
Broken: current git
Worked: maybe never

Short description of error
So if you have a parent mesh, with some vertex children
and the parent mesh has a constructive modifier (even a disabled one)
and you select parent + children , then copy it.
the children in the copy will 'jump' as if the vertex order has changed in the parent (copy)aa

Exact steps for others to reproduce the error
First download the .blend file (no python needed)copy_solidify.blend
1- Open the file
2- Note that everything is selected, body_hands (the parent) is active
3- note the position of the fingers and thumbs
4- shift D and drag mouse to place the copy somewhere then click.
5- note the fingers.L/.R and thumb.L/.R have now migrated to new locations.

Workaround:
4b- remove the solidify modifier
5b- copy as in step 4 above
6b- readd the solidify modifier or copy it onto body_hands.001

The solidify modifier is just an example - I've had the bug trigger with Mask modifier and others. It may not be all constructive modifiers (I've gotten away with subsurf) My guess is the vertex order is getting changed, but I haven't really checked it, it's possible that offsets are getting recalculated wrongly - using the derived mesh instead of the original one. (this might need some finesse to make sure things stay working for other modifiers - e.g. armature which currently doesn't trigger the bug)

**System Information** GNU/Linux (Fedora 23) Intel and nVidia gfx , intel cpu **Blender Version** Broken: current git Worked: maybe never **Short description of error** So if you have a parent mesh, with some vertex children and the parent mesh has a constructive modifier (even a disabled one) and you select parent + children , then copy it. the children in the copy will 'jump' as if the vertex order has changed in the parent (copy)aa **Exact steps for others to reproduce the error** First download the .blend file (no python needed)[copy_solidify.blend](https://archive.blender.org/developer/F242438/copy_solidify.blend) 1- Open the file 2- Note that everything is selected, body_hands (the parent) is active 3- note the position of the fingers and thumbs 4- shift D and drag mouse to place the copy somewhere then click. 5- note the fingers.L/.R and thumb.L/.R have now migrated to new locations. Workaround: 4b- remove the solidify modifier 5b- copy as in step 4 above 6b- readd the solidify modifier or copy it onto body_hands.001 The solidify modifier is just an example - I've had the bug trigger with Mask modifier and others. It may not be all constructive modifiers (I've gotten away with subsurf) My guess is the vertex order is getting changed, but I haven't really checked it, it's possible that offsets are getting recalculated wrongly - using the derived mesh instead of the original one. (this might need some finesse to make sure things stay working for other modifiers - e.g. armature which currently doesn't trigger the bug)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali

This issue was referenced by 541d28f1a3

This issue was referenced by 541d28f1a3b5b62e8e9a384b0628064477553baa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thanks Campbell!!! Confirm that it works also in my more complex file :D

Thanks Campbell!!! Confirm that it works also in my more complex file :D
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46385
No description provided.