Fix T46385: Duplicate w/ vertex parent fails

Depsgraph customdata flag was set on the parent,
then cleared once the parent object was handled.

This is initialized to zero for new nodes, no need to clear.